----------
v3.1.0-git
----------



-----------
v3.1.0beta1
-----------

[jan] Add composite script backends.
[jan] Add vacation driver for ISPConfig (Michael Bunk
      <mb@computer-leipzig.com>).
[jan] Hide unsupported form fields of vacation form (Michael Bunk
      <mb@computer-leipzig.com>).
[jan] Add composite transport backends.
[jan] Move shared ruleset selection to sidebar.
[mms] All Ingo templates now use Horde_View.


------
v3.0.3
------

[jan] Fix multiple user-defined headers in a single rule (Zephaniah E.
      Loss-Cutler-Hull, Bug #11893).
[jan] Use more portable procmail recipe for rejects (Bug #7520).
[jan] Fix configuration of 'forward_file' parameter (Bug #11989).
[mms] Require non-empty subject and reason fields when creating a vacation
      message (crohmann@netcologne.de, Request #8376).
[jan] Update French translation (Paul De Vlieger
      <paul.de_vlieger@moniut.univ-bpclermont.fr>).


------
v3.0.2
------

[jan] Update Basque translation (Ibon Igartua <ibon.igartua@ehu.es>).
[jan] Fix changing permissions for shared rulesets.


------
v3.0.1
------

[jan] Update Slovak translation (Jozef Sudolský <jozef.sudolsky@elbia.sk>).
[mms] Fix PHP error notification thrown if backends 'params' parameter was
      empty (Bug #11615).


------
v3.0.0
------

[mms] Add 'euser' option to 'transport_auth' hook allowing the effective user
      to be provided for the timsieved transport driver.


-----------
v3.0.0beta2
-----------

[mms] Add 'transport_auth' hook to handle defining authentication parameters
      for transport backends.
[mms] Remove session caching of rules.
[mms] Initial implementation of smartmobile view.
[mms] Disable blacklist, vacation, and whitelist API methods if the preference
      is locked.


-----------
v3.0.0beta1
-----------

[jan] Update icon set.
[mms] Fix javascript actions on the vacation page.


------------
v3.0.0alpha1
------------

[mms] When adding to blacklist/whitelist, remove added addresses from the